Fixes the white space between the logo and the header, two boxes were moved to the region called overlay

--- a/htdocs/sites/default/themes/mc_base/css/main.css
+++ b/htdocs/sites/default/themes/mc_base/css/main.css
@@ -2433,3 +2433,7 @@ clear: initial;
 	margin: 0px;
 	padding: 0px;
 }
+
+#overlay{
+	display: none;
+}
